--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -32,7 +32,7 @@
   <link href="{{url}}{{favicon}}" rel="shortcut icon" type="image/x-icon">
 
   <link href="/public/lib/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css">
-  <link href="/public/lib/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet" type="text/css">    
+  <link href="/public/lib/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet" type="text/css">
   <link href="/public/lib/angular-bootstrap-datetimepicker/src/css/datetimepicker.css"  rel="stylesheet" type="text/css"/>
 
 
@@ -49,28 +49,28 @@
   </section>
 
 
-  <script src="//maps.google.com/maps/api/js"></script>    
-  <script src="/public/lib/angular/angular.js"></script>
-  <script src="/public/lib/angular-animate/angular-animate.js"></script>
-  <script src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
-  <script src="/public/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="/public/lib/angular-sanitize/angular-sanitize.js"></script>
-  <script src="/public/lib/angular-toastr/dist/angular-toastr.js"></script>
-  <script src="/public/lib/angular-toastr/dist/angular-toastr.tpls.js"></script>
-  <script src="/public/lib/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="/public/lib/angular-cookie/angular-cookie.min.js"></script>
-  <script src="/public/lib/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js"></script>
-  <script src="/public/lib/lodash/lodash.min.js"></script>    
+  <script type="text/javascript" src="//maps.google.com/maps/api/js"></script>
+  <script type="text/javascript" src="/public/lib/angular/angular.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-animate/angular-animate.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-sanitize/angular-sanitize.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-toastr/dist/angular-toastr.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-toastr/dist/angular-toastr.tpls.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-ui-router/release/angular-ui-router.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-cookie/angular-cookie.min.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js"></script>
+  <script type="text/javascript" src="/public/lib/lodash/lodash.min.js"></script>
 
-  <script src="/public/lib/ngmap/build/scripts/ng-map.min.js"></script>    
-  <script src="/public/lib/d3/d3.min.js"></script>
-  <script src="/public/lib/moment/moment.js"></script>
-  <script src="/public/lib/moment-timezone/moment-timezone.js"></script>
-  <script src="/public/lib/angular-moment/angular-moment.js"></script>
-  <script src="/public/lib/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-  <script src="/public/lib/ng-file-upload/ng-file-upload.min.js"></script>
-  <script src="/scripts/moment-timezone-data.js"></script>
-  <script src="/scripts/readable-range.js"></script>
+  <script type="text/javascript" src="/public/lib/ngmap/build/scripts/ng-map.min.js"></script>
+  <script type="text/javascript" src="/public/lib/d3/d3.min.js"></script>
+  <script type="text/javascript" src="/public/lib/moment/moment.js"></script>
+  <script type="text/javascript" src="/public/lib/moment-timezone/moment-timezone.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-moment/angular-moment.js"></script>
+  <script type="text/javascript" src="/public/lib/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
+  <script type="text/javascript" src="/public/lib/ng-file-upload/ng-file-upload.min.js"></script>
+  <script type="text/javascript" src="/scripts/moment-timezone-data.js"></script>
+  <script type="text/javascript" src="/scripts/readable-range.js"></script>
 
 
 
