--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -31,62 +31,28 @@
   <!-- Fav Icon -->
   <link href="{{url}}{{favicon}}" rel="shortcut icon" type="image/x-icon">
 
-  <link href="/public/lib/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css">
-  <link href="/public/lib/angular-bootstrap/ui-bootstrap-csp.css" rel="stylesheet" type="text/css">
-  <link href="/public/lib/angular-bootstrap-datetimepicker/src/css/datetimepicker.css"  rel="stylesheet" type="text/css"/>
-
-
   <!-- Application CSS Files -->
   {% for cssFile in cssFiles %}<link rel="stylesheet" href="{{cssFile}}">{% endfor %}
 </head>
 
 <body class="ng-cloak">
-  <x-tmpl-header></x-tmpl-header>
+  <header ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
   <section class="content">
     <section class="container">
       {% block content %}{% endblock %}
     </section>
   </section>
 
-
-  <script type="text/javascript" src="//maps.google.com/maps/api/js"></script>
-  <script type="text/javascript" src="/public/lib/angular/angular.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-animate/angular-animate.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-bootstrap/ui-bootstrap.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-sanitize/angular-sanitize.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-toastr/dist/angular-toastr.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-toastr/dist/angular-toastr.tpls.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-ui-router/release/angular-ui-router.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-cookie/angular-cookie.min.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js"></script>
-  <script type="text/javascript" src="/public/lib/lodash/lodash.min.js"></script>
-
-  <script type="text/javascript" src="/public/lib/ngmap/build/scripts/ng-map.min.js"></script>
-  <script type="text/javascript" src="/public/lib/d3/d3.min.js"></script>
-  <script type="text/javascript" src="/public/lib/moment/moment.js"></script>
-  <script type="text/javascript" src="/public/lib/moment-timezone/moment-timezone.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-moment/angular-moment.js"></script>
-  <script type="text/javascript" src="/public/lib/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-  <script type="text/javascript" src="/public/lib/ng-file-upload/ng-file-upload.min.js"></script>
-  <script type="text/javascript" src="/scripts/moment-timezone-data.js"></script>
-  <script type="text/javascript" src="/scripts/readable-range.js"></script>
-
-
-
-
-
-
   <!--Embedding The User Object-->
   <script type="text/javascript">
     var user = {{ user | json | safe }};
   </script>
-
+  
   <!--Load The Socket.io File-->
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
   <!--Application JavaScript Files-->
-  {% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
+  {% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %} 
 
   {% if livereload %}
   <!--Livereload script rendered -->
