--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -66,32 +66,36 @@
 <nav class="navbar navbar-fixed-top navbar-custom">
     <div class="container-fluid">
 
-		<div class="col-sm-9">
-			<div class="navbar-header">
-				<a class="navbar-brand" ui-sref="default"><img src="images/eao-logo.png" height="40" width="248"/></a>
-			</div>
+      <div class="col-sm-9">
+      	<div class="navbar-header">
+      		<a class="navbar-brand" ui-sref="default"><img src="modules/core/client/img/brand/eao-logo.png" height="40" width="248"/></a>
+      	</div>
 
-			<ul class="nav navbar-nav" ng-if="false">
-				<li ui-sref-active="active">
-					<a ui-sref="default">Dashboard</a>
-				</li>
-			</ul>
-		</div>
+      </div>
 
-		<div class="col-sm-3">
-			<ul class="nav navbar-nav navbar-right" ng-if="tNav.user.type === 'eao'">
-				<li class="text-right navbar-user">
-					<a ui-sref="user.profile">{{ tNav.user.name }}</a><br/>
-					<div class="small">
-						<a x-modal-alerts-viewer class="text-danger" x-divider=true></a><a ui-sref="user.profile">Profile</a>&nbsp;|&nbsp;<a ui-sref="default">Logout</a>
-					</div>
-				</li>
-				<li class="text-right navbar-user navbar-user-icon">
-					<a ui-sref="user.profile"><i class="glyphicon glyphicon-user"></i></a><br/>
-				</li>
+      <div class="col-sm-3">
 
-			</ul>
-		</div>
+      	<ul class="nav navbar-nav navbar-right" ng-show="authentication.user">
+      		<li class="text-right navbar-user">
+      			<a ui-sref="user.profile">{{ tNav.user.name }}</a><br/>
+      			<div class="small">
+      				<a x-modal-alerts-viewer class="text-danger" x-divider=true></a><a ui-sref="user.profile">Profile</a>&nbsp;|&nbsp;<a href="/api/auth/signout">Logout</a>
+      			</div>
+      		</li>
+      		<li class="text-right navbar-user navbar-user-icon">
+      			<a ui-sref="user.profile"><i class="glyphicon glyphicon-user"></i></a><br/>
+      		</li>
+      	</ul>
+
+
+        <ul class="nav navbar-nav navbar-right" ng-show="!authentication.user">
+          <li class="text-right navbar-user">
+            <a ui-sref="authentication.signin">Log In</a>
+          </li>
+        </ul>
+
+
+      </div>
 
     </div>
 </nav>
