--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -33,13 +33,14 @@
 
   <!-- Application CSS Files -->
   {% for cssFile in cssFiles %}<link rel="stylesheet" href="{{cssFile}}">{% endfor %}
+
 </head>
 
 <body class="ng-cloak">
-  <header ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+  <tmpl-header></tmpl-header>
   <section class="content">
-    <section class="container">
-      {% block content %}{% endblock %}
+    <section class="container-fluid">
+    {% block content %}{% endblock %}
     </section>
   </section>
 
