--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -42,10 +42,9 @@ a:hover .header-profile-image {
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 0; }
-
-body {
-  background-color: transparent; }
+  padding-top: 0;
+  background-color: transparent;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 a:hover,
 a:link,
