--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -68,9 +68,8 @@ a:hover .header-profile-image {
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
     padding-top: 0;
-}
-body {
 	background-color: transparent;
+	font-family: $font-family-sans-serif;
 }
 a:hover,
 a:link,
