--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -11,7 +11,8 @@
 					<p><strong>Status</strong>: {{ project.status }}</p>
 					<p><strong>Type</strong>: {{ project.type }}</p>
 					<p>{{ project.description }}</p>
-					<p><a href ng-click="projectList.goToProject( project._id );">Detail View</a></p>						
+					<p ng-show="projectList.auth.user === ''"><a html ui-sref="public.project({id: project._id})">Detail View</a></p>
+					<p ng-show="projectList.auth.user !== ''"><a html ui-sref="eao.project({id: project._id})">Detail View</a></p>
 				</div>
 			</div>
 		</info-window>
