Manage Comments, Document Upload button.

--- a/modules/documents/client/views/partials/document-upload-general.html
+++ b/modules/documents/client/views/partials/document-upload-general.html
@@ -42,7 +42,7 @@
 
 	<div class="row">
 		<div class="col-sm-12 text-right">
-			<button ng-click="docList.upload()" ng-if="docUpload.fileList.length > 0" class="btn btn-success">
+			<button ng-click="docUpload.upload()" ng-if="docUpload.fileList.length > 0" class="btn btn-success">
 				Upload Queued Documents
 			</button>
 		</div>
