Project vs Comment Type for Document Upload

--- a/modules/projects/client/views/project-eao-intake.html
+++ b/modules/projects/client/views/project-eao-intake.html
@@ -79,7 +79,7 @@
 						</div>
 
 						<div ng-if="form.curTab === 'Document Upload'">
-							<tmpl-documents-upload-classify x-project="projectIntake.project"></tmpl-documents-upload-classify>					
+							<tmpl-documents-upload-classify x-project="projectIntake.project" x-type="project"></tmpl-documents-upload-classify>					
 						</div>
 					</fieldset>
 				</div> <!-- /panelbody -->
