--- a/modules/projects/client/views/project-eao-new.html
+++ b/modules/projects/client/views/project-eao-new.html
@@ -80,7 +80,7 @@
 					</div>
 
 					<div ng-if="form.curTab === 'Document Upload'">
-						<tmpl-documents-upload-classify x-project="projectNew.project"></tmpl-documents-upload-classify>					
+						<tmpl-documents-upload-classify x-project="projectNew.project" x-type="project"></tmpl-documents-upload-classify>					
 					</div>
 
 				</div> <!-- /panelbody -->
