--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -61,7 +61,13 @@ a:hover .header-profile-image {
 }
 
 
-
+.btn-primary,
+.btn-success,
+.btn-info,
+.btn-warning,
+.btn-danger {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .2) !important;
+}
 
 
 
