--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -80,7 +80,7 @@
       		<li class="text-right navbar-user" ng-show="header.authentication.user">
       			<a ui-sref="user.profile">{{ header.authentication.user.name }}</a><br/>
       			<div class="small">
-      				<a x-modal-alerts-viewer class="text-danger" x-divider=true></a><a ui-sref="header.authentication.user.profile">Profile</a>&nbsp;|&nbsp;<a href="/api/auth/signout">Logout</a>
+      				<a x-modal-alerts-viewer class="text-danger" x-divider=true></a><a ui-sref="header.authentication.user.profile">Profile</a>&nbsp;|&nbsp;<a href="/api/auth/signout" target="_self">Logout</a>
       			</div>
       		</li>
           <li class="text-right navbar-user" ng-show="!header.authentication.user">
