--- a/modules/core/client/views/403.client.view.html
+++ b/modules/core/client/views/403.client.view.html
@@ -1,6 +1,15 @@
-<h1>Forbidden</h1>
-<div class="alert alert-danger" role="alert">
-  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-  <span class="sr-only">Error:</span>
-  You are not authorized to access this resource
-</div>
+<h1 class="page-title">
+	Permission Error
+</h1>
+<section class="container-fluid">
+
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<p>You have tried to access part of the system not available to your account.</p>
+			<p>If you feel you have recieved this in error, please contact your system administrator.</p>
+			<p>To return to the prior screen, click the back button on your browser.</p>			
+			<p>Have a wonderful day.</p>
+		</div>
+	</div>
+
+</section>
