Public view improvements

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -3,6 +3,11 @@
  * -------------------------------------------------------------------------- */
 /* ----- Colors ----- */
 /* ----- Typography ----- */
+
+.titlecase {
+  text-transform: capitalize;
+}
+
 .content {
   margin-top: 80px; }
 
