--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -10,7 +10,7 @@
 				<div class='panel-heading'>
 					<div><label class="control-label">Developer</label><p>{{ vm.project.proponent.name }}</p></div>
 					<div><label class="control-label">Type</label><p>{{ vm.project.type }}</p></div>
-					<div><label class="control-label titlecase">Location</label><p>{{ vm.project.region }}</p></div>
+					<div><label class="control-label">Location</label><p>{{ vm.project.region | titleCase }}</p></div>
 					<div><label class="control-label">Description</label><p>{{ vm.project.description }}</p></div>
 					<p><small><a href><span class='glyphicon glyphicon-file'></span> Comprehensive Project Description</a></small></p>
 				</div>
@@ -103,14 +103,14 @@
 			</div>
  -->
 
-			<nav class="navbar navbar-default navbar-sm">
+			<nav class="navbar navbar-default navbar-sm" ng-init="vm.form.view = 'bydate'">
 				<div class="container-fluid">
 
 					<ul class="nav navbar-nav navbar-form navbar-left">
 						<li>
 							<div class="btn-group btn-group-sm">
 								<button class="btn btn-default" ng-click="vm.form.view = 'bydate'"	ng-class="{'btn-primary': vm.form.view === 'bydate'}">By Date</button>
-								<button class="btn btn-default" ng-click="vm.form.view = 'byvc'"	ng-class="{'btn-primary': vm.form.view === 'byvc'}">By Value Components</button>
+								<button class="btn btn-default" ng-click="vm.form.view = 'byvc'"	ng-class="{'btn-primary': vm.form.view === 'byvc'}">By Topic</button>
 							</div>
 						</li>
 					</ul>
@@ -133,7 +133,7 @@
 
 			<div ng-repeat="bucket in filteredBuckets = (vm.project.buckets | filter:vm.filterKeyword)" class="concern-list" ng-show="vm.form.view === 'byvc'">
 				<h3 ng-click='form[point.group] = !form[point.group]' class="clickable concern-heading">
-					{{ bucket.name }}
+					{{ bucket.name }} <div class="pull-right">({{ filteredBuckets.length || 0 }})</div>
 				</h3>
 				<hr ng-if='!form[point.group] && !$last'>
 
@@ -182,12 +182,14 @@
 			</div>
 
 
-			<div ng-repeat="(title, items) in vm.commentsByDate" class="concern-list" ng-show="vm.form.view === 'bydate'">
-				<h3 class="clickable concern-heading">
-					{{ title }}
-				</h3>
 
-				<div class="panel panel-default panel-concern" ng-repeat='item in items'>
+
+			<div ng-repeat="(title, items) in vm.commentsByDate" class="concern-list" ng-show="vm.form.view === 'bydate'">
+				<h3 ng-click='form[title] = !form[title]' class="clickable concern-heading">
+					{{ title }} <div class="pull-right">{{ (items| filter:vm.filterKeyword).length || 0 }}</div>
+				</h3>
+				<hr ng-if='!form[title] && !$last'>
+				<div class="panel panel-default panel-concern" ng-show='form[title]' ng-repeat='item in items | filter:vm.filterKeyword'>
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-sm-8">
@@ -196,12 +198,24 @@
 							<div class="col-sm-4">
 								{{ item.author }}<br/>
 								{{ item.dateAdded}}
-								
+								<ul ng-if="item.documents">
+									<li ng-repeat="file in item.documents">{{ file.title }}</li>
+								</ul>
 							</div>
 						</div>
 					</div>
-						
 				</div>
+
+
+				<div class="panel panel-default panel-concern" ng-show='(items| filter:vm.filterKeyword).length === 0 && form[title]'>
+					<div class="panel-body">
+						<p>No comments match this filter.</p>
+					</div>
+				</div>
+
+
+
+
 			</div>
 
 
