--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -3,11 +3,6 @@
  * -------------------------------------------------------------------------- */
 /* ----- Colors ----- */
 /* ----- Typography ----- */
-
-.titlecase {
-  text-transform: capitalize;
-}
-
 .content {
   margin-top: 80px; }
 
@@ -80,7 +75,7 @@ html {
   /* IE10+ */
   background: linear-gradient(to bottom, #606c88 0%, #3f4c6b 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#606c88', endColorstr='#3f4c6b',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606c88', endColorstr='#3f4c6b',GradientType=0 );
   /* IE6-9 */
   min-height: 100%; }
 
@@ -556,3 +551,5 @@ nav {
 
 .panel > .table.table-stacked {
   margin-bottom: 30px; }
+
+/*# sourceMappingURL=core.css.map */
