--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -69,7 +69,7 @@
       <div class="col-sm-9">
       	<div class="navbar-header">
 
-      		<a class="navbar-brand" ui-sref="default"><img src="modules/core/client/img/brand/eao-logo.png" height="40" width="248"/></a>
+      		<div class="navbar-brand"><img src="modules/core/client/img/brand/eao-logo.png" height="40" width="248"/></div>
       		</div>
 
       </div>
