--- a/modules/projects/client/views/project-partials/project-tombstone-horizontal.html
+++ b/modules/projects/client/views/project-partials/project-tombstone-horizontal.html
@@ -38,7 +38,7 @@
 
 						<div class='col-sm-3'>
 							<label class="control-label">Phase Completion</label>
-							<tmpl-progress-circle x-subtext="estimated progress" x-percentage="projTomb.project.progress" x-max-width="200"></tmpl-progress-circle>
+							<tmpl-progress-circle x-subtext="estimated progress" x-percentage="projTomb.project.overallProgress" x-max-width="200"></tmpl-progress-circle>
 						</div>
 					</div>
 				</div><!--  /project-info-large -->
@@ -89,8 +89,9 @@
 
 				<div class='panel-body' ng-if="projTomb.tombstone">
 
-					<p><a href x-modal-project-edit-plan-schedule 		x-project="projTomb.project"><span class='glyphicon glyphicon-calendar'></span> Manage Schedule</a></p>
-					<p><a href x-modal-eao-access						x-project="projTomb.project"><span class='glyphicon glyphicon-user'></span> Manage Access</a></p>
+					<p><a href x-modal-project-edit-plan-schedule 						x-project="projTomb.project"><span class='glyphicon glyphicon-calendar'></span> Manage Schedule</a></p>
+					<p><a href x-modal-eao-access					x-user-is="admin"		x-project="projTomb.project"><span class='glyphicon glyphicon-user'></span> Manage Access</a></p>
+					<p><a href x-modal-proponent-access			x-user-is-not="admin"	x-project="projTomb.project"><span class='glyphicon glyphicon-user'></span> Manage Access</a></p>
 
 					<hr>
 
@@ -103,11 +104,11 @@
 
 					<hr>
 
-					<a href x-modal-view-spatially 			x-project="projTomb.project"><span class='glyphicon glyphicon-globe'></span> View Spatially</a>
+					<a href x-modal-view-spatially		x-project="projTomb.project"><span class='glyphicon glyphicon-globe'></span> View Spatially</a>
 
 					<hr>
 
-					<p><a href ui-sref="configuration"><span class='glyphicon glyphicon-pencil'></span> System Configuration</a></p>
+					<p><a href ui-sref="configuration" x-user-is="admin"><span class='glyphicon glyphicon-pencil'></span> System Configuration</a></p>
 
 				</div>
 
