Comment Vetting Fixes. Document Upload improvements. Sending comment triggers document upload now.

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -262,7 +262,8 @@ th .progress-bar {
   padding-top: 1px;
   padding-left: 7px; }
 
-.concern-heading {
+.concern-heading,
+.concern-heading .small {
   color: #f4f4f4; }
 
 .panel-project-summary h3 {
